--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,18 @@ services:
     image: docker.pkg.github.com/williamjacksn/four-oh-four/four-oh-four
     build: .
     init: true
+    environment:
+      DB: postgres://postgres:postgres@postgres/postgres
+
+  postgres:
+    image: postgres:11.6-alpine
+    environment:
+      POSTGRES_PASSWORD: postgres
+      PGDATA: /var/lib/postgresql/data/11
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
