--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
-version: '3.7'
+version: '3.8'
 
 services:
   four-oh-four:
-    image: docker.pkg.github.com/williamjacksn/four-oh-four/four-oh-four
-    build: .
+    image: ghcr.io/williamjacksn/four-oh-four
     init: true
     environment:
       DB: postgres://postgres:postgres@postgres/postgres
