Add build context to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   four-oh-four:
+    build: .
     image: ghcr.io/williamjacksn/four-oh-four
     init: true
     environment:
