--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   four-oh-four:
     build: .
@@ -9,7 +7,7 @@ services:
       DB: postgres://postgres:postgres@postgres/postgres
 
   postgres:
-    image: postgres:11.7-alpine
+    image: postgres:11
     environment:
       POSTGRES_PASSWORD: postgres
       PGDATA: /var/lib/postgresql/data/11
