--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ markupsafe==3.0.2
     # via
     #   jinja2
     #   werkzeug
-psycopg2==2.9.9
+psycopg2-binary==2.9.10
     # via -r requirements.in
 waitress==3.0.0
     # via -r requirements.in
