--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -57,10 +57,10 @@ jobs:
     steps:
 
       - name: Configure SSH key
-        run: |
-          install --mode=600 -D /dev/null ~/.ssh/id_ed25519
-          echo "${{ secrets.ssh_private_key }}" > ~/.ssh/id_ed25519
-          ssh-keyscan -H -p 53185 ${{ secrets.ssh_host }} > ~/.ssh/known_hosts
+        run: sh ci/configure-ssh-key.sh
+        env:
+          SSH_HOST: ${{ secrets.ssh_host }}
+          SSH_PRIVATE_KEY: ${{ secrets.ssh_private_key }}
 
       - name: Pull latest container image
         run: ssh ssh://${{ secrets.ssh_user }}@${{ secrets.ssh_host }}:53185 /usr/bin/docker compose --file /home/${{ secrets.ssh_user }}/syncthing/coruscant/compose.yaml pull four-oh-four
