--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -56,6 +56,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Check out the repository
+        uses: actions/checkout@v4
+
       - name: Configure SSH key
         run: sh ci/configure-ssh-key.sh
         env:
