--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,86 +1,59 @@
-{
-  "env": {
-    "_workflow_file_generator": "ci/gen-github-workflows.py",
-    "image_name": "ghcr.io/${{ github.repository }}"
-  },
-  "jobs": {
-    "build": {
-      "name": "Build the container image",
-      "permissions": {
-        "packages": "write"
-      },
-      "runs-on": "ubuntu-latest",
-      "steps": [
-        {
-          "name": "Set up Docker Buildx",
-          "uses": "docker/setup-buildx-action@v3"
-        },
-        {
-          "name": "Build the container image",
-          "uses": "docker/build-push-action@v6",
-          "with": {
-            "cache-from": "type=gha",
-            "cache-to": "type=gha,mode=max",
-            "tags": "${{ env.image_name }}:latest"
-          }
-        },
-        {
-          "if": "github.event_name == 'push' || github.event_name == 'workflow_dispatch'",
-          "name": "Log in to GitHub container registry",
-          "uses": "docker/login-action@v3",
-          "with": {
-            "password": "${{ github.token }}",
-            "registry": "ghcr.io",
-            "username": "${{ github.actor }}"
-          }
-        },
-        {
-          "if": "github.event_name == 'push' || github.event_name == 'workflow_dispatch'",
-          "name": "Push latest image to registry",
-          "uses": "docker/build-push-action@v6",
-          "with": {
-            "cache-from": "type=gha",
-            "push": true,
-            "tags": "${{ env.image_name }}:latest"
-          }
-        }
-      ]
-    },
-    "deploy": {
-      "if": "github.event_name == 'push' || github.event_name == 'workflow_dispatch'",
-      "name": "Deploy the app",
-      "needs": "build",
-      "runs-on": "ubuntu-latest",
-      "steps": [
-        {
-          "name": "Check out the repository",
-          "uses": "actions/checkout@v5"
-        },
-        {
-          "env": {
-            "SSH_HOST": "${{ secrets.ssh_host }}",
-            "SSH_PRIVATE_KEY": "${{ secrets.ssh_private_key }}",
-            "SSH_USER": "${{ secrets.ssh_user }}"
-          },
-          "name": "Deploy the app",
-          "run": "sh ci/ssh-deploy.sh"
-        }
-      ]
-    }
-  },
-  "name": "Build and deploy app",
-  "on": {
-    "pull_request": {
-      "branches": [
-        "master"
-      ]
-    },
-    "push": {
-      "branches": [
-        "master"
-      ]
-    },
-    "workflow_dispatch": {}
-  },
-  "permissions": {}
-}
+name: Build and deploy app
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+
+concurrency:
+  group: build-and-deploy
+
+permissions: {}
+
+jobs:
+  build:
+    name: Build the container image
+    permissions:
+      packages: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build the container image
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ghcr.io/williamjacksn/four-oh-four:latest
+      - name: Log in to GitHub container registry
+        uses: docker/login-action@v3
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        with:
+          password: ${{ github.token }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+      - name: Push latest image to registry
+        uses: docker/build-push-action@v6
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+        with:
+          cache-from: type=gha
+          push: true
+          tags: ghcr.io/williamjacksn/four-oh-four:latest
+  deploy:
+    name: Deploy the app
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v5
+      - name: Deploy the app
+        run: sh ci/ssh-deploy.sh
+        env:
+          SSH_HOST: ${{ secrets.ssh_host }}
+          SSH_PRIVATE_KEY: ${{ secrets.ssh_private_key }}
+          SSH_USER: ${{ secrets.ssh_user }}
